//common.proto
syntax = "proto3";

message User {
  string userId = 1;
  string fullName = 2;
  string email = 3;
  string avatarUri = 4;
  bool   emailVerified = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string provider = 8;
  SubscriptionData subscription = 9;
}


message SubscriptionData {
  string subscriptionId = 1;
  string type = 2;
  SubscriptionPerks perks = 3;
  string startedAt = 4;
  string endedAt = 5;
}

message SubscriptionPerks {
  string perkId = 1;
  int32  staticProjects = 2;
  int32  dynamicProjects = 3;
}

message RequestMeta {
   string requestId = 1;
}
message BodyLessRequest {
  User authUserData = 1;
  RequestMeta reqMeta = 2;
}

message BulkResourceRequest {
   User authUserData = 1;
   int64 skip = 2;
   int32 limit = 3;
   RequestMeta reqMeta = 4;
}


message EnvironmentVariablesKeyValue {
    string name = 1;
    string value = 2;
}

message InternalEmptyRequest {
    RequestMeta reqMeta = 1;
}